--- a/src/Components/NavBar/NavBar.css
+++ b/src/Components/NavBar/NavBar.css
@@ -1,43 +1,68 @@
 .navbar {
-    padding: 20px;
-    display: flex;
-    justify-content: space-between;
-    align-items: center;
+  padding: 20px;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
 }
 
 .navbar .logo {
-    width: 150px;
-    height: 70px;
+  width: 150px;
+  height: 70px;
 }
 
 .navmenu {
-    display: flex;
-    flex-direction: row;
-    list-style: none;
-    gap: 20px;
-    color: grey;
-    font-size: 18px;
+  display: flex;
+  flex-direction: row;
+  list-style: none;
+  gap: 20px;
+  color: grey;
+  font-size: 18px;
 }
 
 .navbar-right {
-    display: flex;
-    align-items: center;
-    gap: 40px;
+  display: flex;
+  align-items: center;
+  gap: 40px;
 }
 
 .navbar button {
-    background-color: transparent;
-    font-size: 16px;
-    color: gray;
-    border: 1px solid tomato;
-    padding: 10px 30px;
-    cursor: pointer;
-    border-radius: 50px;
-    transition: .3s;
+  background-color: transparent;
+  font-size: 16px;
+  color: gray;
+  border: 1px solid tomato;
+  padding: 10px 30px;
+  cursor: pointer;
+  border-radius: 50px;
+  transition: 0.3s;
 }
 
 .navbar button:hover {
-    background-color: rgb(252, 237, 232);
+  background-color: rgb(252, 237, 232);
+}
+.navbar-search-icon {
+  position: relative;
+}
+.dot {
+  position: absolute;
+  top: -8px;
+  right: -8px;
+  background-color: tomato;
+  height: fit-content;
+  width: fit-content;
+  border-radius: 50px;
+}
+.dot p {
+  padding: 3px;
+  color: white;
+  font-size: 12px;
+  border-radius: 50px;
+}
 
+.active {
+  padding-bottom: 2px;
+  border-bottom: 2px solid tomato;
+}
 
+.navmenu li {
+  cursor: pointer;
 }
