--- a/src/Components/Header/Header.css
+++ b/src/Components/Header/Header.css
@@ -15,6 +15,7 @@
     max-width: 50%;
     bottom: 10%;
     left: 6vw;
+    animation: fadeIn 2s;
 }
 
 .header-contents h2 {
@@ -35,4 +36,6 @@
     font-weight: 500;
     padding: 1vw 2.5vw;
     background-color: white;
+    font-size: max(1vw, 13px);
+    border-radius: 50px;
 }
