--- a/src/index.css
+++ b/src/index.css
@@ -1,4 +1,5 @@
 @import url('https://fonts.googleapis.com/css2?family=Outfit:wght@100..900&display=swap');
+
 * {
   padding: 0;
   margin: 0;
@@ -13,4 +14,21 @@ body {
 a {
   text-decoration: none;
   color: inherit;
+
+
+
+
+}
+
+@keyframes fadeIn {
+  0% {
+    opacity: 0;
+
+
+  }
+
+  100% {
+    opacity: 1;
+  }
+
 }
