--- a/src/Components/ExploreMenu/ExploreMenu.css
+++ b/src/Components/ExploreMenu/ExploreMenu.css
@@ -33,13 +33,13 @@
   min-width: 80px;
   cursor: pointer;
   border-radius: 50%;
-  transition: 0.2s;
+  transition: 0.1s;
 }
 
 .explore-menu-list-item p {
   margin-top: 10px;
   color: #747474;
-  font-size: maz(1.4vw, 16px);
+  font-size: max(1.4vw, 16px);
   cursor: pointer;
 }
 
@@ -51,6 +51,7 @@
 }
 
 .explore-menu-list-item .active {
-  border: 5px, solid tomato;
-  padding: 5px;
+  border: 4px solid tomato;
+    padding: 2px;
+    background-color: tomato;
 }
